# email-spam-detection

./: .gitignore  demo.py  dvc.yaml  enqueue_grid_search.py  examples.txt  main.py  pyproject.toml  sweep.yaml  train-local.py  train.py
.dvc/: config
best-model/: .gitignore  epoch=9-step=339.ckpt.dvc
data/: .gitignore  raw.dvc
email_spam_detection/: model.py  settings.py
email_spam_detection/dataset/: dataloader.py  datamodule.py  dataset.py
email_spam_detection/preprocess/: cross_validation.py  extract.py  preprocess.py  subjects.py
scripts/: extract.py  prepare_cv.py  preprocess.py  subjects.py  train.py
tests/: test_email_spam_detection.py
